# audio-visual-processing-coursework-2

./: .gitignore  README.md  extract_audio.py  lip_extraction.py  main.py  pyproject.toml  requirements.txt  utils.py
audio_video_files/: ahmed_001.MOV  ahmed_005.MOV  ahmed_007.MOV  ahmed_008.MOV  ahmed_009.MOV  ahmed_010.MOV  ahmed_011.MOV  ahmed_012.MOV  ahmed_013.MOV  ahmed_014.MOV  ahmed_015.MOV  ahmed_016.MOV  ahmed_017.MOV  ahmed_018.MOV  ahmed_019.MOV  ahmed_020.MOV  amber_002.MOV  amber_005.MOV  amber_006.MOV  amber_007.MOV  amber_008.MOV  amber_009.MOV  amber_010.MOV  amber_011.MOV  amber_012.MOV  amber_013.MOV  amber_014.MOV  amber_015.MOV  amber_016.MOV  amber_017.MOV  amber_018.MOV  amber_019.MOV  amber_020.MOV  charlie_001.MOV  charlie_004.MOV  charlie_006.MOV  charlie_007.MOV  charlie_008.MOV  charlie_009.MOV  charlie_010.MOV  (+232 more)
lib/: audio_features.py  linear_model.py  lip_extraction.py  video_features.py  visual_feature_interp.py
src/audio_video_files/: jess_001.MOV  jess_002.MOV  jess_004.MOV  jess_005.MOV  jess_007.MOV  jess_009.MOV  jess_012.MOV  jess_013.MOV  jess_015.MOV  josh_002.MOV  josh_003.MOV  josh_004.MOV  josh_005.MOV  josh_007.MOV  josh_009.MOV  josh_010.MOV  josh_012.MOV  josh_013.MOV  josh_015.MOV  joshua_001.MOV  joshua_002.MOV  joshua_004.MOV  joshua_006.MOV  joshua_008.MOV  joshua_009.MOV  joshua_012.MOV  joshua_014.MOV  joshua_015.MOV  kailong_001.MOV  kailong_002.MOV  kailong_003.MOV  kailong_004.MOV  ngozi_001.MOV  ngozi_003.MOV  ngozi_006.MOV  ngozi_007.MOV
