[project]
name = "audio-visual-processing-coursework-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "keras>=3.12.0",
    "librosa>=0.11.0",
    "matplotlib>=3.10.7",
    "moviepy>=2.2.1",
    "opencv-python>=4.12.0.88",
    "plotly>=6.5.0",
    "scikit-learn>=1.7.2",
    "sounddevice>=0.5.3",
    "soundfile>=0.13.1",
    "tensorflow>=2.20.0",
]
